crates/swc_ecma_parser/tests/jsx/errors/wrong-opening-tag-fragment/input.js.stderr
error: Unexpected eof
 --> $DIR/tests/jsx/errors/wrong-opening-tag-fragment/input.js:1:15
  |
1 | <something></>
  |               ^

